--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -17,6 +17,6 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
-ADMIN_NAME: First User
-ADMIN_EMAIL: user@example.com
-ADMIN_PASSWORD: changeme
+ADMIN_NAME: Oleg G.Kapranov
+ADMIN_EMAIL: lugatex@yahoo.com
+ADMIN_PASSWORD: password
